@@ -17,8 +17,6 @@ package SPVM::IO::File {
   native sub close : int ($self : self);
   native sub seek : int ($self : self, $offset : long, $whence : int);
   
-  native sub putc : int ($self : self, $c : byte);
-  native sub write : int ($self : self, $buffer : string, $legnth : int);
   native sub print : int ($self : self, $string : string);
   native sub flush : void ();
   
